[metadata]
name = plusplus
version = 0.1
author = Alexander Borzunov
author_email = borzunov.alexander@gmail.com
description = Enable the ++x and --x expressions in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/borzunov/plusplus
project_urls =
    Bug Tracker = https://github.com/borzunov/plusplus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    bytecode >= 0.12.0

[options.extras_require]
dev =
    pytest >= 6.2.5

[options.packages.find]
where = src